# job-aggregator

./: .gitignore  README.md  permissions.md  pyproject.toml
app/: db.py  main.py
app/exceptions/: errors.py
app/models/: __init__.py  company_career_model.py  job_description_model.py  job_listing_model.py  job_skill_model.py  skills_model.py  user_model.py
app/routes/: __init__.py  company_career_routes.py  health_routes.py  job_desc_routes.py  job_routes.py  user_routes.py
app/schema/: __init__.py  company_career_page.py  job_desc_schema.py  jobs.py  user.py
app/service/: __init__.py  company_service.py  job_desc_service.py  job_service.py  user_service.py
app/utils/: __init__.py  pagination.py  security.py
